# vicinity

./: .ghci  .gitignore  ChangeLog.md  README.md  stack.yaml  vicinity.cabal
src-fast/Data/Nat/: Arithmetic.hs
src-slow/Data/Nat/: Arithmetic.hs
src/Data/: BasicSet.hs  Nat.hs  Vicinities.hs  Vicinity.hs
test/: Doctest.hs  Spec.hs
