name: vicinity
version: 0.1.0
description: Please see the README on Github at <https://github.com/andrewthad/vicinity#readme>
homepage: https://github.com/andrewthad/vicinity#readme
bug-reports: https://github.com/andrewthad/vicinity/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10

extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/vicinity

library
  hs-source-dirs:
    src
  build-depends:
    base >=4.7 && <5
  exposed-modules:
    Data.Vicinity
    Data.Vicinities
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
      base >=4.7 && <5
    , vicinity
    , QuickCheck
    , quickcheck-classes == 0.3.1
  default-language: Haskell2010
